# CorgiDS

./: .gitignore  README.md  meson.build
CorgiDS/: CorgiDS.pro
src/: arm7rw.cpp  arm9rw.cpp  armtable.cpp  audiodevice.cpp  audiodevice.hpp  bios.cpp  bios.hpp  cartridge.cpp  cartridge.hpp  config.cpp  config.hpp  configwindow.cpp  configwindow.hpp  configwindow.ui  cp15.cpp  cp15.hpp  cpu.cpp  cpu.hpp  cpuinstrs.cpp  cpuinstrs.hpp  debugger.cpp  debugger.hpp  debugwindow.cpp  debugwindow.hpp  disasm_arm.cpp  disasm_thumb.cpp  disassembler.hpp  dma.cpp  dma.hpp  emulator.cpp  emulator.hpp  emuthread.cpp  emuthread.hpp  emuwindow.cpp  emuwindow.hpp  firmware.cpp  firmware.hpp  gpu.cpp  gpu.hpp  gpu3d.cpp  (+24 more)
src/gba/: gbadma.cpp  gbadma.hpp  gbagpu.cpp  gbarw.cpp
src/qt/: audiodevice.hpp  configwindow.cpp  configwindow.hpp  configwindow.ui  debugwindow.ui  emuthread.cpp  emuthread.hpp  emuwindow.cpp  emuwindow.hpp
